Bug 20155: Improve readability of OPAC header language menu
This patch makes some minor HTML and CSS changes in order to make the
header's language-chooser menu more readable and consistent with the
Lists menu.

To test, apply this patch and the patch with the compiled CSS.

- Install and enable more than one translation.
- Set the OpacLangSelectorMode to either "top" or "both top and footer."
- View the OPAC's header menu and confirm that the links and menus look
  correct whether or not a user is logged in.

--- a/koha-tmpl/opac-tmpl/bootstrap/less/opac.less
+++ b/koha-tmpl/opac-tmpl/bootstrap/less/opac.less
@@ -70,6 +70,10 @@ a {
             color : #FFF;
         }
     }
+    &.login-link {
+        color: #A6D8ED;
+        font-weight: bold;
+    }
 }
 
 .ui-widget-content a,
@@ -184,14 +188,14 @@ td {
         color : #EEE;
     }
     a {
-        color: #A6D8ED;
-        font-weight: bold;
         &.logout {
             color : #E8583C;
+            font-weight: bold;
             padding : 0 .3em 0 .3em;
         }
     }
 }
+
 #koha_url p {
         color: #666666;
         float : right;
